# tools_and_snippets

./: .gitignore  .gitmodules  ByteGenerator.py  README.md  _test_tas_openvpn_ca.sh  arch_install.sh  btrfs_backup.py  btrfs_localbackup.py  btrfs_snap.py  difflist.rs  dirDiff.rs  pathtree.rs  permset.py  permset_json.py  tas_arch_install.sh  tas_btrfs_backup.sh  tas_btrfs_localbackup.sh  tas_btrfs_snap.sh  tas_bytegenerator.py  tas_config_user.py  tas_easyrsa.py  tas_easyrsa_ca_srv_cli.sh  tas_easyrsa_client.sh  tas_easyrsa_create_ca_server.sh  tas_easyrsa_create_client.sh  tas_easyrsa_initca.sh  tas_http_trigger.py  tas_install_mycrates.py  tas_internet_check.ps1  tas_mount.py  tas_permset_json.py  tas_win10_configure.ps1  tas_wireguard_gen.py
Permission/: permset.py  test.json
ShellTools/: dirSize.py
antlr/: build.sh  demo.g4  main.py
antlr_int_array_string/: demo.g4  main.py
antlr_test/: build.sh
bash_snippets/sshfs_dialog/: tas_mount_sshfs.sh
browser/: html_browser.py  mod_net.py  platform_linux.py  platform_windows.py  tas_network_browser.py
cpp_snippets/: Makefile  boost_fs_example.cpp  cpp_trait_test_1.cpp  rvalue_references.cpp  template_concepts_specialization.cpp
cpp_snippets/cmake_qt6_hello_world/: CMakeLists.txt
cpp_tools/dirdiff/: .gitignore  detaildui.h  detailgui.cpp  detailgui.h  dirdiff.pro  filesys.cpp  filesys.h  fsdiff.cpp  fsdiff.h  main.cpp  maingui.cpp  maingui.h  moc_opengui.cpp  moc_treemodel.cpp  opengui.cpp  opengui.h  sortfilterproxy.cpp  sortfilterproxy.h  treemodel.cpp  treemodel.h
installscripts/: 1_win10_system.ps1  2_win10_user.ps1  3_git.py  3_user.py  3_vscode.py  4_python_packages.py  archlinux_install_software.sh  user.py  win10_system.ps1  win10_user.ps1
installscripts/linux/: 1_install_software.py
installscripts/windows/: 1_software.ps1
misc/: qemu_gdb_rawimage.sh
misc/qemu_cortexa_mmu/: build.sh  defaultlibs  gdb.cmd  libc  linker.ld  main.c  start.sh  startup.s
netbrowser/: helper.py  platform_linux.py  platform_windows.py  tas_network_browser.py  test.py
netbrowser/history/: tas_browser.py
python/antlr_test/: main.py
python_http_trigger/: server.py
python_snippets/: decorator.py  functions.py  iter.py
python_snippets/python_antrl_test/: README.md
python_snippets/python_antrl_test/antlr_int_array_string/: testinput.txt
python_standalone_serverinfo/: index.html  main.css  mod_explore_lan.py  mod_listip.py  server.py  settings.py
python_tools/python_standalone_serverinfo/: helper.py  mod_routing.py
python_tools/rpi_gpio_web/: index.html  watchdog.py
rust_snippets/: custom_panic.rs
rust_snippets/dep_piston/src/: main.rs
rust_snippets/dirdiff/: dirDiff.rs
rust_snippets/enum_option/src/: main.rs
rust_snippets/mem/: Cargo.toml
rust_snippets/mem/src/: main.rs
rust_snippets/mult_dir_diff/: Cargo.toml  example.sh  out.html
rust_snippets/mult_dir_diff/src/: diff_tool.rs  main.rs  reporter.rs
rust_snippets/my_vector_lib/: Cargo.toml
rust_snippets/my_vector_lib/src/: lib.rs
rust_snippets/own_struct/: Cargo.toml
rust_snippets/own_struct/src/: main.rs
rust_snippets/rc_tree/: Cargo.toml
rust_snippets/save_mut_ref_in_vec/: Cargo.toml
rust_snippets/save_mut_ref_in_vec/src/: main.rs
rust_snippets/string_stuff/: Cargo.toml
rust_snippets/string_stuff/src/: main.rs
rust_snippets/thread_example/src/: main.rs
rust_snippets/trainingsplan/: Cargo.toml
rust_snippets/trainingsplan/src/: excercises.rs  main.rs  sqldb.rs
rust_snippets/trainingsplan/static/: index.html  logic.js
rust_tools/binary_generator/: Cargo.toml
rust_tools/binary_generator/src/: main (conflicted copy 2021-06-12 232427).rs  main.rs
rust_tools/imtui/src/: main.rs
rust_tools/networklist/: Cargo.toml
rust_tools/networklist/src/: main.rs  os_specific_windows.rs
rust_tools/rust_test_binary/: Cargo.toml
snippets/bash/other/: btrfs_snap.sh
snippets/bash/sshfs_dialog/: tas_mount_basedir.sh
snippets/cpp/: Makefile  concept_struct_overload.cpp  container_template.cpp  couroutines_overview.cpp  cpp_trait_test_0.cpp  lambda.cpp  ptr_comparison.cpp  template_function_enable_if.cpp  template_nested_builder.cpp  template_struct_overload_pitfall.cpp  template_template.cpp  template_variadic_element_with_idx.cpp  template_variadic_element_with_idx_name.cpp  template_variadic_endless.cpp  variadic_template_print_1.cpp
snippets/cpp/blocks_with_bgfx/: CMakeLists.txt  README.txt  main.cpp
snippets/cpp/cmake_qt6_hello_world/: main.cpp
snippets/cpp/linux_elf_dep/: build.sh
snippets/cpp/vulkan_engine/: CMakeLists.txt
snippets/cpp/vulkan_engine/shaders/: vert.spv
snippets/cpp/vulkan_engine/shaders3/: shader.vert  vert.spv
snippets/cpp/vulkan_engine/src/: main.cpp
snippets/cpp/vulkan_engine/src/engine/: EngineRender.cpp  EngineRender.h  EngineTypes.h
snippets/cpp/vulkan_engine/src/example/blocks/: blocks.cpp  blocks.h  blocksTypes.h
snippets/cpp/vulkan_engine/src/render/vulkan/: VulBase.cpp  VulBase.h  VulDevice.cpp  VulDevice.h  VulRender.cpp  VulRender.h
snippets/cpp/vulkan_example/: CMakeLists.txt  compile.txt  hello.h  main.cpp
snippets/cpp/vulkan_example/shaders/: shader.vert
snippets/cpp/vulkan_helper/: .project  CMakeLists.txt  main.cpp  vul_base.cpp  vul_base.h  vul_device.cpp  vul_device.h  vul_instance.cpp  vul_instance.h  vul_render.cpp  vul_render.h
snippets/cpp/webgpu-native/: .gitignore  CMakeLists.txt
snippets/cpp/webgpu-native/src/: main.cpp
snippets/python/: callable_object.py  copyDirRecursively.py  introspecion.py
snippets/rust/: simple_box_layout.rs
snippets/rust/RAII/: Cargo.toml
snippets/rust/trainingsplan/: Cargo.toml
snippets/rust/trainingsplan/src/: main.rs  sqldb.rs
snippets/rust/trainingsplan/static/: logic.js  styles.css
testdata/: test_permset.json
tools/rust/: _Cargo.toml  install.py
vhdl_snippets/adder_mem_loop/: mem.vhd  mem_tb.vhd
vhdl_snippets/design_cpu_domipheus_tutorial/: decode.vhd  reg16_8_tb.vhd  tpu_constants.vhd
vhdl_snippets/file_output/: simple_testbench_tb.vhd
vhdl_snippets/shiftregister/: myshreg.vhd
(+180 files in other folders)
