[package]
name = "trainingsplan"
version = "0.1.0"
authors = ["Martin K. <martin.awake1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web   = "3"
actix-files = "0.5.0"
serde       = "1.0.127"
serde_json  = "1.0.66"
env_logger  = "0.9.0"

[dependencies.rusqlite]
version = "0.26.2"
features = ["bundled"]